--- a/Events/package.json
+++ b/Events/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "homepage": "https://NextGenInnovatorsClub.github.io",
+  "homepage": "https://NextGen-Innovators-Club.github.io",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,9 +14,11 @@
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.14.5",
     "framer-motion": "^10.16.16",
+    "maath": "^0.10.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^7.9.3",
     "yet-another-react-lightbox": "^3.21.3"
   },
   "devDependencies": {
@@ -34,3 +36,6 @@
     "vite": "^7.1.7"
   }
 }
+
+
+
