--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,13 +18,16 @@
   "author": "NextGen Club Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.5",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "joi": "^17.11.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "joi": "^17.11.0",
+    "mongoose": "^8.19.0",
+    "mysql2": "^3.6.5",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
