--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   "author": "NextGen Club Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
